# masters

./: README.md
nrf_connect_Implementation/: README.md
nrf_connect_Implementation/boards/arm/caretronic_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  caretronic_nrf52840-pinctrl.dtsi  caretronic_nrf52840.dts  caretronic_nrf52840.yaml  caretronic_nrf52840_defconfig
nrf_connect_Implementation/lsm6dsl/: CMakeLists.txt  prj.conf
nrf_connect_Implementation/lsm6dsl/features/: features.c  features.h  mahalanobis_calculation.c  mahalanobis_calculation.h
nrf_connect_Implementation/lsm6dsl/lsm6dsl_custom/: gpio_interrupt_setup.c  lsm6dsl_reg.c  lsm6dsl_reg.h  sensor_api.c  sensor_api.h
nrf_connect_Implementation/lsm6dsl/remote_service/: remote.c  remote.h
nrf_connect_Implementation/lsm6dsl/src/: main.c
research/: README.md
research/Analiza_nasih_podatkov/: analyze_features.ipynb  extract_features.ipynb  makeoutputs.py  vfeatures.py
research/Analiza_nasih_podatkov/features/: caretronic_52_v_m_256_256_detrend.csv
research/our_data/: info.txt
research/our_data/Subjects/1/: metadata.json
research/our_data/Subjects/10/: metadata.json
research/our_data/Subjects/11/: metadata.json
research/our_data/Subjects/12/: metadata.json
research/our_data/Subjects/13/: metadata.json
research/our_data/Subjects/14/: metadata.json
research/our_data/Subjects/15/: metadata.json
research/our_data/Subjects/16/: metadata.json
research/our_data/Subjects/17/: metadata.json
research/our_data/Subjects/18/: metadata.json
research/our_data/Subjects/2/: metadata.json
(+222 files in other folders)
